--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,15 @@
     font-size: 30px;
   }
 
+  .p__opensans_aboutme {
+    font-family: var(--font-alt);
+    color: var(--color-white);
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    line-height: 30px;
+    font-size: 20px;
+  }
+
 a {
     all: unset;
 }
@@ -133,5 +142,10 @@ a {
 
   .app__wrapper {
     min-height:0;
+  }
+
+  .p__opensans_aboutme {
+    line-height: 20px;
+    font-size: 18px;
   }
 }
