--- a/src/containers/AboutMe/AboutMe.css
+++ b/src/containers/AboutMe/AboutMe.css
@@ -6,38 +6,42 @@
     margin-bottom: 100px;
 }
 
+.about_container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    column-gap: 76px;
+    margin-top: 70px;
+}
+
+.aboutleft, .aboutright {
+    flex: 1 1 0;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+    text-align: left;
+}
 
 @media screen and (min-width: 2000px) {
-    .app__header h1 {
-        font-size: 180px;
-        line-height: 210px;
-    }
+ 
 }
 
 @media screen and (max-width: 1150px) {
-    .app__header h1 {
-        font-size: 90px;
-    }
+ 
 }
 
 @media screen and (max-width: 650px) {
-    .app__header h1 {
-        font-size: 60px;
-        line-height: 87px;
-    }
 
-    .p__cormorant-header{
-        font-size: 30px;
-    }
 }
 
 @media screen and (max-width: 450px) {
-    .app__header h1 {
-        font-size: 40px;
-        line-height: 70px;
+
+    .about_container {
+        display: block;
     }
-    .p__cormorant-header {
-        padding-bottom: 10px;
-        font-size: 23px;
+
+    .aboutleft {
+        margin-bottom: 50px;
     }
 }
