--- a/src/containers/Experience/Experience.css
+++ b/src/containers/Experience/Experience.css
@@ -3,7 +3,7 @@
   color: var(--color-white);
   font-weight: 600;
   letter-spacing: 0.03em;
-  line-height: 25px;
+  line-height: 20px;
   font-size: 18px;
 }
 
@@ -19,7 +19,6 @@
 
 .titles_container {
   display: flex;
-  height: auto;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -27,7 +26,7 @@
 .product_container {
   display: flex;
   height: auto;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
