--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -32,6 +32,9 @@
   font-size: 18px;
 }
 
+.pointer {
+  cursor: pointer;
+}
 @media screen and (min-width: 2000px) {
   .app__header h1 {
     font-size: 180px;
